--- a/app/views/admin/users/edit.html.slim
+++ b/app/views/admin/users/edit.html.slim
@@ -1,13 +1,1 @@
-= simple_form_for [:admin, @user], as: :user, url: admin_user_url do |f|
-  .row
-    .col-lg-1
-      = f.button :submit, 'Back', formaction: admin_users_url, formmethod: 'get'
-    .col-lg-11
-      h4  Create new user
-  p
-  = f.input :first_name
-  = f.input :last_name
-  = f.input :email
-  = f.input :password
-  = f.input :type, as: :select, collection: ['Admin', 'Manager', 'Developer']
-  = f.button :submit, 'Confirm'
+= render 'admin/users/partials/form', url: admin_user_url, formaction_url: admin_users_url, submit_text: 'Confirm', header: 'Update user'
